bot changes